feat: working spice meta

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -99,6 +99,30 @@
                     }
                 }
             ]
+        },
+        {
+            "type": "shell",
+            "label": "redeploy_workflow",
+            "command": "${workspaceFolder}/start_dev.sh",
+            "args": ["--redeploy"],
+            "isBackground": true,
+            "problemMatcher": [
+                {
+                    "pattern": [
+                        {
+                            "regexp": ".",
+                            "file": 1,
+                            "location": 2,
+                            "message": 3
+                        }
+                    ],
+                    "background": {
+                        "activeOnStart": true,
+                        "beginsPattern": ".*Deploying to server.*",
+                        "endsPattern": ".*Deployment complete.*"
+                    }
+                }
+            ]
         }
     ],
     "version": "2.0.0"
